--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       SPRING_DEVTOOLS_RESTART_ENABLED: "true"
     depends_on:
       - db
+    networks:
+      - auction-network
 
   db:
     image: postgres:13
@@ -25,7 +27,12 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - auction-network
 
 volumes:
   postgres_data:
 
+networks:
+  auction-network:
+    external: true
